mobile design in process

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -21,6 +21,19 @@
           <li><a class="contactMeBtn" href="#contact">Contact</a></li>
         </ul>
       </div>
+      <div class="navBar_Mobile">
+        <div class="navBarModal">
+          <button class="closeModalBtn"><img src="./src/assets/icons/closeBtn.png" alt=""></button>
+        <ul class="linksMenu">
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a class="contactMeBtn" href="#contact">Contact</a></li>
+        </ul>
+        </div>
+       
+      </div>
+      <button class="menuModalBtn"><img src="./src/assets/icons/burguerBtn.png" alt="menuBtn"></button>
     </nav>
     <main>
       <section id="hero">
