adjust layout in process

--- a/index.html
+++ b/index.html
@@ -268,18 +268,32 @@
                     </div>
                   </div>
                 </div>
-                <img src="./src/assets/projects/EcommerceReact.png" alt="" />
+                <img
+                  src="./src/assets/projects/screen-capture-ecommerce.png"
+                  alt=""
+                />
               </div>
-              <div class="cardHeading">FrontEnd E-Commerce</div>
+              <div class="cardHeading">FullStack E-Commerce</div>
               <div class="separator"></div>
               <div class="cardBody">
                 <p>
-                  Mi primer viaje al mundo de la programación con React,
-                  Tailwind y Firebase como base de datos. Explora este proyecto
-                  de e-commerce, donde aprendí y apliqué los principales hooks
-                  de React para crear una experiencia de compra fluida. Desde la
-                  gestión de estados hasta la integración con una potente base
-                  de datos.
+                  Explora mi proyecto e-commerce,
+                  donde la solidez del front-end se construye con React y
+                  Tailwind, implementando los fundamentales hooks de React para
+                  lograr una experiencia de compra fluida y envolvente.
+                </p>
+                <p>
+                  En el núcleo del back-end, desarrollé una infraestructura
+                  robusta con Node.js y Express que va más allá de un simple
+                  CRUD. Las funciones esenciales, como login, autenticación
+                  segura y envío de correos electrónicos, están integradas en
+                  una estructura MVC.
+                </p>
+
+                <p>
+                  Descubre cómo esta arquitectura proporciona una experiencia de
+                  compra sin complicaciones, respaldada por una conexión firme
+                  con MongoDB.
                 </p>
               </div>
               <div class="cardTechStack">
@@ -298,16 +312,20 @@
                     <p>JS</p>
                   </li>
                   <li>
+                    <img src="./src/assets/stack/ts.png" alt="" />
+                    <p>TS</p>
+                  </li>
+                  <li>
                     <img src="./src/assets/stack/react.png" alt="" />
                     <p>React</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/tailwind.png" alt="" />
-                    <p>Tailwind</p>
+                    <img src="./src/assets/stack/nodeJs.png" alt="" />
+                    <p>NodeJS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/firebase.png" alt="" />
-                    <p>Firebase</p>
+                    <img src="./src/assets/stack/mongoDB.png" alt="" />
+                    <p>MongoDB</p>
                   </li>
                 </ul>
               </div>
