adjust some URL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
     <link
       rel="shortcut icon"
-      href="./src/assets/icons/programador.png"
+      href="/assets/icons/programador.png"
       type="image/x-icon"
     />
     <title>MiguePortfolio</title>
@@ -29,7 +29,7 @@
       <div class="navBar_Mobile">
         <div class="navBarModal">
           <button class="closeModalBtn">
-            <img src="./src/assets/icons/closeBtn.png" alt="" />
+            <img src="/assets/icons/closeBtn.png" alt="" />
           </button>
           <ul class="linksMenu">
             <li><a href="#hero">Home</a></li>
@@ -40,7 +40,7 @@
         </div>
       </div>
       <button class="menuModalBtn">
-        <img src="./src/assets/icons/burguerBtn.png" alt="menuBtn" />
+        <img src="/assets/icons/burguerBtn.png" alt="menuBtn" />
       </button>
     </nav>
     <main>
@@ -92,43 +92,43 @@
           <div class="separator"></div>
           <ul class="about_techStackList">
             <li>
-              <img src="./src/assets/stack/html-5.png" alt="" />
+              <img src="/assets/stack/html-5.png" alt="" />
               <p>HTML</p>
             </li>
             <li>
-              <img src="./src/assets/stack/css-3.png" alt="" />
+              <img src="/assets/stack/css-3.png" alt="" />
               <p>CSS</p>
             </li>
             <li>
-              <img src="./src/assets/stack/js.png" alt="" />
+              <img src="/assets/stack/js.png" alt="" />
               <p>JS</p>
             </li>
             <li>
-              <img src="./src/assets/stack/ts.png" alt="" />
+              <img src="/assets/stack/ts.png" alt="" />
               <p>TS</p>
             </li>
             <li>
-              <img src="./src/assets/stack/react.png" alt="" />
+              <img src="/assets/stack/react.png" alt="" />
               <p>ReactJS</p>
             </li>
             <li>
-              <img src="./src/assets/stack/nodeJs.png" alt="" />
+              <img src="/assets/stack/nodeJs.png" alt="" />
               <p>NodeJs</p>
             </li>
             <li>
-              <img src="./src/assets/stack/mongoDB.png" alt="" />
+              <img src="/assets/stack/mongoDB.png" alt="" />
               <p>MongoDB</p>
             </li>
             <li>
-              <img src="./src/assets/stack/mysql.png" alt="" />
+              <img src="/assets/stack/mysql.png" alt="" />
               <p>MySql</p>
             </li>
             <li>
-              <img src="./src/assets/stack/bootstrap.png" alt="" />
+              <img src="/assets/stack/bootstrap.png" alt="" />
               <p>Bootstrap</p>
             </li>
             <li>
-              <img src="./src/assets/stack/tailwind.png" alt="" />
+              <img src="/assets/stack/tailwind.png" alt="" />
               <p>Tailwind</p>
             </li>
           </ul>
@@ -187,7 +187,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="./src/assets/projects/AleBaezaPortfolio.png" alt="" />
+                <img src="/assets/projects/AleBaezaPortfolio.png" alt="" />
               </div>
               <div class="cardHeading">Portafolio para Actriz</div>
               <div class="separator"></div>
@@ -204,19 +204,19 @@
                 <h3>Hecho con</h3>
                 <ul class="cardTechStackList">
                   <li>
-                    <img src="./src/assets/stack/html-5.png" alt="" />
+                    <img src="/assets/stack/html-5.png" alt="" />
                     <p>HTML</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/css-3.png" alt="" />
+                    <img src="/assets/stack/css-3.png" alt="" />
                     <p>CSS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/js.png" alt="" />
+                    <img src="/assets/stack/js.png" alt="" />
                     <p>JS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/bootstrap.png" alt="" />
+                    <img src="/assets/stack/bootstrap.png" alt="" />
                     <p>Bootstrap</p>
                   </li>
                 </ul>
@@ -269,7 +269,7 @@
                   </div>
                 </div>
                 <img
-                  src="./src/assets/projects/screen-capture-ecommerce.png"
+                  src="/assets/projects/screen-capture-ecommerce.png"
                   alt=""
                 />
               </div>
@@ -277,10 +277,10 @@
               <div class="separator"></div>
               <div class="cardBody">
                 <p>
-                  Explora mi proyecto e-commerce,
-                  donde la solidez del front-end se construye con React y
-                  Tailwind, implementando los fundamentales hooks de React para
-                  lograr una experiencia de compra fluida y envolvente.
+                  Explora mi proyecto e-commerce, donde la solidez del front-end
+                  se construye con React y Tailwind, implementando los
+                  fundamentales hooks de React para lograr una experiencia de
+                  compra fluida y envolvente.
                 </p>
                 <p>
                   En el núcleo del back-end, desarrollé una infraestructura
@@ -300,31 +300,31 @@
                 <h3>Hecho con</h3>
                 <ul class="cardTechStackList">
                   <li>
-                    <img src="./src/assets/stack/html-5.png" alt="" />
+                    <img src="/assets/stack/html-5.png" alt="" />
                     <p>HTML</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/css-3.png" alt="" />
+                    <img src="/assets/stack/css-3.png" alt="" />
                     <p>CSS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/js.png" alt="" />
+                    <img src="/assets/stack/js.png" alt="" />
                     <p>JS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/ts.png" alt="" />
+                    <img src="/assets/stack/ts.png" alt="" />
                     <p>TS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/react.png" alt="" />
+                    <img src="/assets/stack/react.png" alt="" />
                     <p>React</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/nodeJs.png" alt="" />
+                    <img src="/assets/stack/nodeJs.png" alt="" />
                     <p>NodeJS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/mongoDB.png" alt="" />
+                    <img src="/assets/stack/mongoDB.png" alt="" />
                     <p>MongoDB</p>
                   </li>
                 </ul>
@@ -380,7 +380,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="./src/assets/projects/backendEcommerce.png" alt="" />
+                <img src="/assets/projects/backendEcommerce.png" alt="" />
               </div>
               <div class="cardHeading">Backend E-Commerce</div>
               <div class="separator"></div>
@@ -399,23 +399,23 @@
                 <h3>Hecho con</h3>
                 <ul class="cardTechStackList">
                   <li>
-                    <img src="./src/assets/stack/html-5.png" alt="" />
+                    <img src="/assets/stack/html-5.png" alt="" />
                     <p>HTML</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/css-3.png" alt="" />
+                    <img src="/assets/stack/css-3.png" alt="" />
                     <p>CSS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/js.png" alt="" />
+                    <img src="/assets/stack/js.png" alt="" />
                     <p>JS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/nodeJs.png" alt="" />
+                    <img src="/assets/stack/nodeJs.png" alt="" />
                     <p>NodeJS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/mongoDB.png" alt="" />
+                    <img src="/assets/stack/mongoDB.png" alt="" />
                     <p>MongoDB</p>
                   </li>
                 </ul>
@@ -468,7 +468,7 @@
                     </div>
                   </div>
                 </div>
-                <img src="./src/assets/projects/tipCalculator.png" alt="" />
+                <img src="/assets/projects/tipCalculator.png" alt="" />
               </div>
               <div class="cardHeading">Tip Calculator</div>
               <div class="separator"></div>
@@ -484,15 +484,15 @@
                 <h3>Hecho con</h3>
                 <ul class="cardTechStackList">
                   <li>
-                    <img src="./src/assets/stack/html-5.png" alt="" />
+                    <img src="/assets/stack/html-5.png" alt="" />
                     <p>HTML</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/css-3.png" alt="" />
+                    <img src="/assets/stack/css-3.png" alt="" />
                     <p>CSS</p>
                   </li>
                   <li>
-                    <img src="./src/assets/stack/js.png" alt="" />
+                    <img src="/assets/stack/js.png" alt="" />
                     <p>JS</p>
                   </li>
                 </ul>
@@ -553,7 +553,7 @@
       <footer id="footer">
         <div class="socials">
           <a href="https://www.linkedin.com/in/migangel/" target="_blank"
-            ><img src="./src/assets/icons/linkedin.png" alt="linkedin"
+            ><img src="/assets/icons/linkedin.png" alt="linkedin"
           /></a>
           <a
             href="https://github.com/arenascode"
@@ -574,10 +574,10 @@
             </svg>
           </a>
           <a href="mailto:migue.arenas91@gmail.com">
-            <img src="./src/assets/icons/email.png" alt="email" />
+            <img src="/assets/icons/email.png" alt="email" />
           </a>
           <a href="">
-            <img src="./src/assets/icons/curriculum-vitae.png" alt="cv" />
+            <img src="/assets/icons/curriculum-vitae.png" alt="cv" />
           </a>
         </div>
       </footer>
