fixed some img url

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                   </div>
                 </div>
                 <img
-                  src="src/assets/projects/screen-capture-ecommerce.png"
+                  src="https://arenascode.github.io/miguePortfolio/assets/projects/screen-capture-ecommerce.png"
                   alt=""
                 />
               </div>
