adjustments in process

--- a/index.html
+++ b/index.html
@@ -73,18 +73,13 @@
         </div>
         <div class="about_body">
           <p>
-            Passionate about continuous learning and determined to make a
-            positive impact in my first IT job.
+            Committed to continuous learning and determined to make a positive impact in my first IT job.
           </p>
           <p>
-            My commitment to personal and professional growth drives me to seek
-            opportunities to expand knowledge and make a meaningful contribution
-            in innovative projects through technical skills, management
-            abilities, and adaptability.
+            My dedication to personal and professional growth propels me to seek opportunities to expand knowledge and make a meaningful contribution in innovative projects through technical skills, management abilities, and adaptability.
           </p>
           <p>
-            Ready to open the door to change and contribute value in the world
-            of technology.
+            Prepared to open the door to change and contribute value in the world of technology.
           </p>
         </div>
         <div class="about_stack">
