layout for projects in >1200px done

--- a/index.html
+++ b/index.html
@@ -283,25 +283,18 @@
               </div>
               <div class="project_textContent">
                 <div class="cardBody">
-                  <p>
-                    Explora mi proyecto e-commerce, donde la solidez del
-                    front-end se construye con React y Tailwind, implementando
-                    los fundamentales hooks de React para lograr una experiencia
-                    de compra fluida y envolvente.
-                  </p>
-                  <p>
-                    En el núcleo del back-end, desarrollé una infraestructura
-                    robusta con Node.js y Express que va más allá de un simple
-                    CRUD. Las funciones esenciales, como login, autenticación
-                    segura y envío de correos electrónicos, están integradas en
-                    una estructura MVC.
-                  </p>
-
-                  <p>
-                    Descubre cómo esta arquitectura proporciona una experiencia
-                    de compra sin complicaciones, respaldada por una conexión
-                    firme con MongoDB.
-                  </p>
+                  <ul>
+                    <li>Implementación de hooks de React para una experiencia de compra fluida.</li>
+                    <li>
+                      Infraestructura robusta en el back-end con Node.js y Express.
+                    </li>
+                    <li>
+                      Integración de funciones esenciales como login, autenticación segura y envío de correos electrónicos en una estructura MVC.
+                    </li>
+                    <li>
+                      Experiencia de compra sin complicaciones respaldada por MongoDB.
+                    </li>
+                  </ul>
                 </div>
                 <div class="cardTechStack">
                   <h3>Hecho con</h3>
@@ -392,7 +385,7 @@
                   <img src="src/assets/projects/clausDeliveryBags.png" alt="" />
                 </div>
                 <div class="cardHeading">
-                  Landing page for Christmas items sales business
+                Landing page for Christmas entrepreneurship
                 </div>
                 <div class="separator"></div>
               </div>
