new layout projects in process

--- a/index.html
+++ b/index.html
@@ -145,6 +145,85 @@
             <div class="projectCard">
               <div class="project_imageTitle">
                 <div class="cardImg">
+                  <div class="mac-screen">
+                    <div class="bar">
+                      <div class="apple">
+                        <div class="apple4"></div>
+                        <div class="apple3"></div>
+                        <div class="apple2"></div>
+                        <div class="apple-leaf"></div>
+                        <div class="apple-selection"></div>
+
+                        <div class="time-os">9:42</div>
+
+                        <div class="search1"></div>
+                        <div class="search2"></div>
+
+                        <div class="dash1"></div>
+                        <div class="dash2"></div>
+                        <div class="dash3"></div>
+
+                        <div class="battery"></div>
+                        <div class="battery-inside"></div>
+                        <div class="battery-tip"></div>
+                        <div class="battery-perc">100%</div>
+                      </div>
+                      <div class="menu">
+                        Finder File Edit View Go Window Help
+                      </div>
+                      <div class="dock">
+                        <div class="dock_imgContainer">
+                          <img
+                          src="src/assets/stack/html-5.png"
+                          class="html img-size"
+                        />
+                        </div>
+                        <div class="dock_imgContainer">
+                          <img
+                          src="src/assets/stack/css-3.png"
+                          class="appstore img-size"
+                        />
+                        </div>                   
+                        <div class="dock_imgContainer">
+                          <img
+                          src="src/assets/stack/js.png"
+                          class="lunchpad img-size"
+                        />
+                        </div>
+                        <div class="dock_imgContainer">
+                          <img
+                          src="src/assets/stack/bootstrap.png"
+                          class="img-size"
+                        />
+                        </div>
+                        <div class="github dock_imgContainer">
+                          <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="35"
+                            height="35"
+                            viewBox="0 0 35 35"
+                            fill="none"
+                          >
+                            <path
+                              d="M17.4998 2.91666C15.5847 2.91666 13.6884 3.29387 11.919 4.02675C10.1497 4.75963 8.54205 5.83383 7.18786 7.18802C4.45296 9.92292 2.9165 13.6322 2.9165 17.5C2.9165 23.9458 7.10192 29.4146 12.8915 31.3542C13.6207 31.4708 13.854 31.0187 13.854 30.625V28.1604C9.81442 29.0354 8.954 26.2062 8.954 26.2062C8.28317 24.5146 7.33525 24.0625 7.33525 24.0625C6.00817 23.1583 7.43734 23.1875 7.43734 23.1875C8.89567 23.2896 9.66859 24.6896 9.66859 24.6896C10.9373 26.9062 13.0811 26.25 13.9123 25.9C14.0436 24.9521 14.4228 24.3104 14.8311 23.9458C11.5936 23.5812 8.19567 22.3271 8.19567 16.7708C8.19567 15.1521 8.74984 13.8542 9.69775 12.8187C9.55192 12.4542 9.0415 10.9375 9.84359 8.96874C9.84359 8.96874 11.0686 8.57499 13.854 10.4562C15.0061 10.1354 16.2603 9.97499 17.4998 9.97499C18.7394 9.97499 19.9936 10.1354 21.1457 10.4562C23.9311 8.57499 25.1561 8.96874 25.1561 8.96874C25.9582 10.9375 25.4478 12.4542 25.3019 12.8187C26.2498 13.8542 26.804 15.1521 26.804 16.7708C26.804 22.3417 23.3915 23.5667 20.1394 23.9312C20.6644 24.3833 21.1457 25.2729 21.1457 26.6292V30.625C21.1457 31.0187 21.379 31.4854 22.1228 31.3542C27.9123 29.4 32.0832 23.9458 32.0832 17.5C32.0832 15.5849 31.706 13.6885 30.9731 11.9192C30.2402 10.1499 29.166 8.5422 27.8118 7.18802C26.4576 5.83383 24.85 4.75963 23.0806 4.02675C21.3113 3.29387 19.4149 2.91666 17.4998 2.91666Z"
+                              fill="#000000"
+                            />
+                          </svg>
+                        </div>
+                        <div class="web dock_imgContainer">
+                          <img src="src/assets/stack/sitio-web.png" alt="" class="img-size">
+                        </div>
+                      </div>
+                      <img
+                        src="src/assets/projects/AleBaezaPortfolio.png"
+                        class="safari-window"
+                      />
+                    </div>
+                    <div class="camera"></div>
+                  </div>
+                  <div class="mac-body">
+                    <div class="lid"></div>
+                  </div>
                   <div class="projectHover">
                     <div class="cardProjectLinks">
                       <h3>Conoce el Proyecto</h3>
@@ -188,7 +267,7 @@
                       </div>
                     </div>
                   </div>
-                  <img src="src/assets/projects/AleBaezaPortfolio.png" alt="" />
+                  <!-- <img src="src/assets/projects/AleBaezaPortfolio.png" alt="" /> -->
                 </div>
                 <div class="cardHeading">Portafolio para Actriz</div>
                 <div class="separator"></div>
@@ -229,6 +308,72 @@
             <div class="projectCard">
               <div class="project_imageTitle">
                 <div class="cardImg">
+                  <div class="mac-screen">
+                    <div class="bar">
+                      <div class="apple">
+                        <div class="apple4"></div>
+                        <div class="apple3"></div>
+                        <div class="apple2"></div>
+                        <div class="apple-leaf"></div>
+                        <div class="apple-selection"></div>
+
+                        <div class="time-os">9:42</div>
+
+                        <div class="search1"></div>
+                        <div class="search2"></div>
+
+                        <div class="dash1"></div>
+                        <div class="dash2"></div>
+                        <div class="dash3"></div>
+
+                        <div class="battery"></div>
+                        <div class="battery-inside"></div>
+                        <div class="battery-tip"></div>
+                        <div class="battery-perc">100%</div>
+                      </div>
+                      <div class="menu">
+                        Finder File Edit View Go Window Help
+                      </div>
+                      <div class="dock">
+                        <img
+                          src="src/assets/stack/html-5.png"
+                          class="finder img-size"
+                        />
+                        <img
+                          src="src/assets/stack/css-3.png"
+                          class="appstore img-size"
+                        />
+                        <img
+                          src="src/assets/stack/js.png"
+                          class="lunchpad img-size"
+                        />
+                        <img
+                          src="src/assets/stack/ts.png"
+                          class="calendar img-size"
+                        />
+                        <img
+                          src="src/assets/stack/react.png"
+                          class="evernote img-size"
+                        />
+                        <img
+                          src="src/assets/stack/nodeJs.png"
+                          class="itunes img-size"
+                        />
+                        <img
+                          src="src/assets/stack/mongoDB.png"
+                          class="photoshop img-size"
+                        />
+                      </div>
+                      <img
+                        src="src/assets/projects/screen-capture-ecommerce.png"
+                        class="safari-window"
+                      />
+                    </div>
+                    <div class="camera"></div>
+                  </div>
+                  <div class="mac-body">
+                    <div class="lid"></div>
+                  </div>
                   <div class="projectHover projectHover2">
                     <div class="cardProjectLinks">
                       <h3>Conoce el Proyecto</h3>
@@ -273,28 +418,33 @@
                       </div>
                     </div>
                   </div>
-                  <img
+                  <!-- <img
                     src="src/assets/projects/screen-capture-ecommerce.png"
                     alt=""
-                  />
+                  /> -->
                 </div>
                 <div class="cardHeading">FullStack E-Commerce</div>
                 <div class="separator"></div>
               </div>
               <div class="project_textContent">
                 <div class="cardBody">
-                  <ul>
-                    <li>Implementación de hooks de React para una experiencia de compra fluida.</li>
-                    <li>
-                      Infraestructura robusta en el back-end con Node.js y Express.
-                    </li>
-                    <li>
-                      Integración de funciones esenciales como login, autenticación segura y envío de correos electrónicos en una estructura MVC.
-                    </li>
-                    <li>
-                      Experiencia de compra sin complicaciones respaldada por MongoDB.
-                    </li>
-                  </ul>
+                  <p>
+                    Implementación de hooks de React para una experiencia de
+                    compra fluida.
+                  </p>
+                  <p>
+                    Infraestructura robusta en el back-end con Node.js y
+                    Express.
+                  </p>
+                  <p>
+                    Integración de funciones esenciales como login,
+                    autenticación segura y envío de correos electrónicos en una
+                    estructura MVC.
+                  </p>
+                  <p>
+                    Experiencia de compra sin complicaciones respaldada por
+                    MongoDB.
+                  </p>
                 </div>
                 <div class="cardTechStack">
                   <h3>Hecho con</h3>
@@ -385,7 +535,7 @@
                   <img src="src/assets/projects/clausDeliveryBags.png" alt="" />
                 </div>
                 <div class="cardHeading">
-                Landing page for Christmas entrepreneurship
+                  Landing page for Christmas entrepreneurship
                 </div>
                 <div class="separator"></div>
               </div>
