projects layout done for >= 1200px

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <!-- projectsFrame1 -->
           <div class="projectsFrame">
             <div class="projectCard">
-              <div class="project_imageTitle">
+              <div class="projectCard_img">
                 <div class="cardImg">
                   <div class="mac-screen">
                     <div class="bar">
@@ -271,24 +271,28 @@
                       </div>
                     </div>
                   </div>
-                  <!-- <img src="src/assets/projects/AleBaezaPortfolio.png" alt="" /> -->
                 </div>
-                <div class="cardHeading">Portafolio para Actriz</div>
-                <div class="separator"></div>
               </div>
               <div class="project_textContent">
+                <div class="cardHeading">Portafolio para Actriz</div>
+                <div class="separator"></div>
                 <div class="cardBody">
                   <p>
                     Un viaje a través del arte y la actuación. Explora el
                     fascinante mundo de Alejandra en su portafolio interactivo.
+                  </p>
+                  <p>
                     Descubre cómo combinamos HTML, CSS, JS y Bootstrap para dar
-                    vida a su presencia en línea. Diseñado para brillar en
-                    dispositivos móviles, tabletas y computadoras de escritorio.
+                    vida a su presencia en línea.
+                  </p>
+                  <p>
+                    Diseñado para brillar en dispositivos móviles, tabletas y
+                    computadoras de escritorio.
                   </p>
                 </div>
                 <div class="cardTechStack">
                   <h3>Hecho con</h3>
-                  <ul class="cardTechStackList">
+                  <ul class="cardTechStack_list">
                     <li>
                       <img src="src/assets/stack/html-5.png" alt="" />
                       <p>HTML</p>
@@ -310,7 +314,7 @@
               </div>
             </div>
             <div class="projectCard">
-              <div class="project_imageTitle">
+              <div class="projectCard_img">
                 <div class="cardImg">
                   <div class="mac-screen">
                     <div class="bar">
@@ -457,15 +461,11 @@
                       </div>
                     </div>
                   </div>
-                  <!-- <img
-                    src="src/assets/projects/screen-capture-ecommerce.png"
-                    alt=""
-                  /> -->
                 </div>
-                <div class="cardHeading">FullStack E-Commerce</div>
-                <div class="separator"></div>
               </div>
               <div class="project_textContent">
+                <div class="cardHeading">FullStack E-Commerce</div>
+                <div class="separator"></div>
                 <div class="cardBody">
                   <p>
                     Implementación de hooks de React para una experiencia de
@@ -524,7 +524,7 @@
           <!-- projectsFrame2 -->
           <div class="projectsFrame">
             <div class="projectCard">
-              <div class="project_imageTitle">
+              <div class="projectCard_img">
                 <div class="cardImg">
                   <div class="mac-screen">
                     <div class="bar">
@@ -599,7 +599,11 @@
                           />
                         </div>
                       </div>
-                      <img src="src/assets/projects/clausDeliveryBags.png" alt="" class="safari-window"/>
+                      <img
+                        src="src/assets/projects/clausDeliveryBags.png"
+                        alt=""
+                        class="safari-window"
+                      />
                     </div>
                     <div class="camera"></div>
                   </div>
@@ -651,14 +655,13 @@
                       </div>
                     </div>
                   </div>
-                  
                 </div>
+              </div>
+              <div class="project_textContent">
                 <div class="cardHeading">
                   Landing page for Christmas entrepreneurship
                 </div>
                 <div class="separator"></div>
-              </div>
-              <div class="project_textContent">
                 <div class="cardBody">
                   <p>
                     Descubre la magia de la navidad a través de mi último
@@ -691,7 +694,7 @@
               </div>
             </div>
             <div class="projectCard">
-              <div class="project_imageTitle">
+              <div class="projectCard_img">
                 <div class="cardImg">
                   <div class="mac-screen">
                     <div class="bar">
@@ -817,10 +820,11 @@
                   </div>
                   <!-- <img src="src/assets/projects/tipCalculator.png" alt="" /> -->
                 </div>
-                <div class="cardHeading">Tip Calculator</div>
-                <div class="separator"></div>
+                
               </div>
               <div class="project_textContent">
+                <div class="cardHeading">Tip Calculator</div>
+                <div class="separator"></div>
                 <div class="cardBody lastChildCardBody">
                   <p>
                     Calculadora de propina, diseñada con un enfoque
